--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,13 +1,13 @@
 /* === MODAL WINDOW === */
 .modal {
-  // display: block;
-  // position: absolute;
-  position: relative;
-  // left: 50%;
-  // top: 50%;
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+
+  overflow-y: scroll;
   transform: translate(-50%, -50%) scale(1);
-  max-width: 450px;
-  max-height: 609px;
+
   padding: 40px;
   background-color: $primary-page-bg-color;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -16,51 +16,170 @@
   }
 
   @media screen and (min-width: 480px) {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 450px;
-    max-width: none;
-    max-height: none;
-    transform: translate(-50%, -50%) scale(1);
+    width: 95vw;
+    height: 95vh;
+    max-width: 450px;
+    max-height: 610px;
   }
 
   @media screen and (min-width: 1200px) {
-    width: 528px;
-    height: 581px;
+    max-width: 528px;
+    max-height: 581px;
+    overflow-y: unset;
   }
 }
-
-//  {
-//   position: relative;
-//   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   padding: 40px;
-//   max-width: 450px;
-//   max-height: 609px;
-//   background-color: $mainWhiteColor;
-
-//   .backdrop--is-hidden & {
-//     transform: translate(-50%, -50%) scale(0.4);
-//   }
-
-//   @media screen and (min-width: 480px) {
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     width: 450px;
-//     max-width: none;
-//     max-height: none;
-//     transform: translate(-50%, -50%) scale(1);
-//   }
-
-//   @media screen and (min-width: 1200px) {
-//     width: 528px;
-//     height: 581px;
-//   }
-// }
 
 .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+.modal-button-cross {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  margin-bottom: 40px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  box-sizing: border-box;
+  &:hover .icon-cross,
+  &:focus .icon-cross {
+    fill: $accent-blue-color;
+  }
+}
+
+/* === MODAL FORM === */
+.form {
+  display: flex;
+  flex-direction: column;
+
+  &__head {
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.15;
+    color: $title-text-color;
+    margin-bottom: 12px;
+    letter-spacing: 0.03em;
+  }
+  &__wrapper {
+    position: relative;
+    display: block;
+  }
+  &__input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 42px;
+    &:focus {
+      outline: none;
+      border-color: $accent-blue-color;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+  &__icon {
+    position: absolute;
+    top: 50%;
+    left: 14px;
+    transform: translateY(-50%);
+    .form__input:focus + & {
+      fill: $accent-blue-color;
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+  &__message {
+    width: 100%;
+    height: 120px;
+    border-color: rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+    padding: 12px 16px;
+    &::placeholder {
+      color: rgba(117, 117, 117, 0.5);
+    }
+    &:focus {
+      outline: none;
+      border-color: $accent-blue-color;
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+  &__field-message {
+    margin-bottom: 15px;
+  }
+}
+
+//  КАСТОМНЫЙ  CHECKBOX
+.form-checkbox {
+  &__agree {
+    position: relative;
+    font-size: 14px;
+    line-height: 1.71;
+    vertical-align: middle;
+    padding-left: 24px;
+    ::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: inline-block;
+      content: '';
+      width: 17px;
+      height: 16px;
+      border: 1.67px solid $title-text-color;
+      border-radius: 2px;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      .form-checkbox__input:checked + & {
+        border-color: transparent;
+      }
+    }
+    .form-checkbox__input:focus + & {
+      border-color: $accent-blue-color;
+    }
+  }
+  &__wrapper {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    z-index: 10;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .form-checkbox__input:checked + .form-checkbox__agree & {
+      opacity: 1;
+    }
+  }
+  &__link {
+    color: $accent-blue-color;
+  }
+}
+
+/* == MODAL BUTTON == */
+.modal-form-button {
+  width: 200px;
+  height: 50px;
+  font-weight: bold;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 16px;
+  border-radius: 4px;
+  padding: 6px 22px;
+  text-align: center;
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  border: 1px solid transparent;
+  color: $accent-white-color;
+  background-color: $accent-blue-color;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
 }
