--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -4,7 +4,7 @@
   max-width: 1600px;
   padding-top: 118px;
   padding-bottom: 118px;
-
+  margin: 0 auto;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 480px 400px;
@@ -17,16 +17,19 @@
   background-color: $footer-bg-color;
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url('../images/background/hero-mobile@2x.jpg');
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/background/hero-mobile@2x.jpg');
   }
 
   @media screen and (min-width: 768px) {
     max-width: 768px;
     background-size: 768px 400px;
-    background-image: url('../images/background/hero-tablet.jpg');
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/background/hero-tablet.jpg');
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url('../images/background/hero-tablet@2x.jpg');
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/background/hero-tablet@2x.jpg');
     }
   }
 
@@ -36,10 +39,12 @@
     max-width: 1600px;
     height: 600px;
     background-size: 1600px 600px;
-    background-image: url('../images/background/hero-desktop.jpg');
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/background/hero-desktop.jpg');
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url('../images/background/hero-desktop@2x.jpg');
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/background/hero-desktop@2x.jpg');
     }
   }
 
