--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -6,6 +6,9 @@
   @media screen and (min-width: 768px) {
     margin-right: 84px;
   }
+  @media screen and (max-width: 479px) {
+    margin-bottom: 60px;
+  }
 }
 
 .menu {
