--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -39,6 +39,7 @@
     height: 100%;
     top: 0;
     left: 0;
+    overflow-y: scroll;
     padding: 63px 24px;
     background-color: rgba(33, 150, 243, 0.9);
     transform: translateY(100%);
